--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    visibility: hidden;
+}
+
 .isotope_w1_h2, .isotope_w1_h1 {
     width: 280px;
 }
@@ -11,6 +15,8 @@
 }
 
 .referenceItems {
+    margin: 5px;
+    cursor: pointer;
     background-repeat: no-repeat;
     background-size: contain;
     display: block;
@@ -28,3 +34,108 @@
     -o-filter: grayscale(0%);
     filter: grayscale(0%);
 }
+
+.about_title {
+	margin-top:40px;
+	text-transform: uppercase;
+}
+
+.about_line {
+    border-bottom: 1px solid #676767;
+	margin-left:15px;
+	margin-right:15px;
+	margin-bottom:10px;
+}
+
+.about_pix{
+margin-top:25px;
+}
+
+.navbar-default {
+	background-color:#FFF;
+	background-image:none;
+        border-radius: 0px;
+	border:none;
+    	box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.0);
+	min-height:130px;
+}
+
+.about, .contact {
+color:676767;
+}
+
+.about p{
+font-size:17px;
+}
+
+.about_text p{
+margin-bottom:20px;
+}
+
+.navbar-header {
+margin-top:45px;
+}
+
+.navbar-right {
+font-size:18px;
+margin-top:80px;
+color:#676767;
+}
+
+.about_time h4 {
+margin-top:10px;
+}
+
+.about_text h3 {
+margin-top:10px;
+margin-bottom: 0px;
+}
+
+.about_text h2{
+margin-bottom:0px;
+}
+
+.about_text h4{
+margin-top:5px;
+}
+
+#bs-example-navbar-collapse-1 ul li a {
+padding:1px 15px 3px 15px;
+}
+
+#bs-example-navbar-collapse-1 ul li a:hover {
+background-color:#ff0048; 
+color:#FFF;
+}
+
+#bs-example-navbar-collapse-1 ul li a.self{
+background-color:#676767; 
+color:#FFF;
+}
+
+#bs-example-navbar-collapse-1 ul li a:active{
+background-color:#676767; 
+color:#FFF;
+}
+
+.referenceList, .about, .contact {
+padding-bottom:500px;
+}
+
+.about_linx a {
+float:right;
+margin-left:30px;
+}
+
+.about_text p {
+margin-bottom:10px;
+}
+.container {
+    max-width: 1200px;
+    width: 100%;
+    margin: auto;
+}
+#isotopeContainer {
+    visibility: hidden;
+}
+
