--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,10 @@ body {
 
 .about_line {
     border-bottom: 1px solid #676767;
-	margin-left:15px;
-	margin-right:15px;
+	/*margin-left:15px;
+	margin-right:15px;*/
 	margin-bottom:10px;
+	display:block;
 }
 
 .about_pix{
