--- a/css/style.css
+++ b/css/style.css
@@ -27,119 +27,137 @@ body {
     filter: grayscale(100%);
 }
 
-.referenceItems:hover {
-    -webkit-filter: grayscale(0%);
-    -moz-filter: grayscale(0%);
-    -ms-filter: grayscale(0%);
-    -o-filter: grayscale(0%);
-    filter: grayscale(0%);
-}
+    .referenceItems:hover {
+        -webkit-filter: grayscale(0%);
+        -moz-filter: grayscale(0%);
+        -ms-filter: grayscale(0%);
+        -o-filter: grayscale(0%);
+        filter: grayscale(0%);
+    }
 
 .about_title {
-	margin-top:40px;
-	text-transform: uppercase;
+    margin-top: 40px;
+    text-transform: uppercase;
 }
 
 .about_line {
     border-bottom: 1px solid #676767;
-	/*margin-left:15px;
+    /*margin-left:15px;
 	margin-right:15px;*/
-	margin-bottom:10px;
-	display:block;
+    margin-bottom: 10px;
+    display: block;
 }
 
-.about_pix{
-margin-top:25px;
+.about_pix {
+    margin-top: 25px;
 }
 
 .navbar-default {
-	background-color:#FFF;
-	background-image:none;
-        border-radius: 0px;
-	border:none;
-    	box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.0);
-	min-height:130px;
+    background-color: #FFF;
+    background-image: none;
+    border-radius: 0px;
+    border: none;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.0);
+    min-height: 130px;
 }
 
 .about, .contact {
-color:676767;
+    color: 676767;
 }
 
-.about p{
-font-size:17px;
-}
+    .about p {
+        font-size: 17px;
+    }
 
-.about_text p{
-margin-bottom:20px;
+.about_text p {
+    margin-bottom: 20px;
 }
 
 .navbar-header {
-margin-top:45px;
+    margin-top: 45px;
 }
 
 .navbar-right {
-font-size:18px;
-margin-top:80px;
-color:#676767;
+    font-size: 18px;
+    margin-top: 80px;
+    color: #676767;
 }
 
 .about_time h4 {
-margin-top:10px;
+    margin-top: 10px;
 }
 
 .about_text h3 {
-margin-top:10px;
-margin-bottom: 0px;
+    margin-top: 10px;
+    margin-bottom: 0px;
 }
 
-.about_text h2{
-margin-bottom:0px;
+.about_text h2 {
+    margin-bottom: 0px;
 }
 
-.about_text h4{
-margin-top:5px;
+.about_text h4 {
+    margin-top: 5px;
 }
 
 #bs-example-navbar-collapse-1 ul li a {
-padding:1px 15px 3px 15px;
+    padding: 1px 15px 3px 15px;
 }
 
-#bs-example-navbar-collapse-1 ul li a:hover {
-background-color:#ff0048; 
-color:#FFF;
-}
+    #bs-example-navbar-collapse-1 ul li a:hover {
+        background-color: #ff0048;
+        color: #FFF;
+    }
 
-#bs-example-navbar-collapse-1 ul li a.self{
-background-color:#676767; 
-color:#FFF;
-}
+    #bs-example-navbar-collapse-1 ul li a.self {
+        background-color: #676767;
+        color: #FFF;
+    }
 
-#bs-example-navbar-collapse-1 ul li a:active{
-background-color:#676767; 
-color:#FFF;
-}
+    #bs-example-navbar-collapse-1 ul li a:active {
+        background-color: #676767;
+        color: #FFF;
+    }
 
-.referenceList, .about{
-padding-bottom:200px;
+.referenceList, .about {
+    padding-bottom: 200px;
 }
 
 .contact {
-padding-bottom:500px;
+    padding-bottom: 500px;
 }
 
 .about_linx a {
-float:right;
-margin-left:30px;
+    float: right;
+    margin-left: 30px;
 }
 
 .about_text p {
-margin-bottom:10px;
+    margin-bottom: 10px;
 }
+
 .container {
     max-width: 1200px;
     width: 100%;
     margin: auto;
 }
+
 #isotopeContainer {
     visibility: hidden;
+}
+
+@media(max-width: 767px) {
+    .navbar-right {
+        font-size: 22px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    #bs-example-navbar-collapse-1 ul li a {
+        padding: 8px;
+    }
+
+    .navbar-default .navbar-collapse, .navbar-default .navbar-form {
+        border: none;
+    }
 }
